--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/style.css">
     <title>Social Proof Section Master</title>
   </head>
   <body>
-    
+    <main>
+      <div class="container">
+        <div class="left-column">
+          <h1>10,000+ of our users love our products.</h1>
+          <p>
+            We only provide great products combined with excellent customer service.
+            See what our satisfied customers are saying about our services.
+          </p>
+        </div>
+        <div class="right-column">
+          <div class="rate">
+            <div class="stars"></div>
+            <p>Rated 5 Stars in Reviews</p>
+          </div>
+          <div class="rate">
+            <div class="stars"></div>
+            <p>Rated 5 Stars in Reviews</p>
+          </div>
+          <div class="rate">
+            <div class="stars"></div>
+            <p>Rated 5 Stars in Reviews</p>
+          </div>
+        </div>
+        <div class="review-card">
+          <div class="card-container">
+            <div class="user"></div>
+            <div class="review"></div>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
