--- a/index.html
+++ b/index.html
@@ -19,22 +19,78 @@
         </div>
         <div class="right-column">
           <div class="rate">
-            <div class="stars"></div>
+            <div class="stars">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+            </div>
             <p>Rated 5 Stars in Reviews</p>
-          </div>
-          <div class="rate">
-            <div class="stars"></div>
+          </div>          <div class="rate">
+            <div class="stars">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+            </div>
             <p>Rated 5 Stars in Reviews</p>
-          </div>
-          <div class="rate">
-            <div class="stars"></div>
+          </div>          <div class="rate">
+            <div class="stars">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+              <img src="img/icon-star.svg" alt="star">
+            </div>
             <p>Rated 5 Stars in Reviews</p>
           </div>
         </div>
         <div class="review-card">
           <div class="card-container">
-            <div class="user"></div>
-            <div class="review"></div>
+            <div class="user">
+              <img src="img/image-colton.jpg" alt="colt">
+              <div class="user-info">
+                <p>Colt Smith</p>
+                <p>Verified Buyer</p>
+              </div>
+            </div>
+            <div class="review">
+              <p>
+                "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
+              </p>
+            </div>
+          </div>
+        </div>        <div class="review-card">
+          <div class="card-container">
+            <div class="user">
+              <img src="img/image-colton.jpg" alt="colt">
+              <div class="user-info">
+                <p>Colt Smith</p>
+                <p>Verified Buyer</p>
+              </div>
+            </div>
+            <div class="review">
+              <p>
+                "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
+              </p>
+            </div>
+          </div>
+        </div>        <div class="review-card">
+          <div class="card-container">
+            <div class="user">
+              <img src="img/image-colton.jpg" alt="colt">
+              <div class="user-info">
+                <p>Colt Smith</p>
+                <p>Verified Buyer</p>
+              </div>
+            </div>
+            <div class="review">
+              <p>
+                "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
+              </p>
+            </div>
           </div>
         </div>
       </div>
