--- a/index.html
+++ b/index.html
@@ -62,18 +62,19 @@
               </p>
             </div>
           </div>
-        </div>        <div class="review-card">
+        </div>        
+        <div class="review-card">
           <div class="card-container">
             <div class="user">
               <img src="img/image-colton.jpg" alt="colt">
               <div class="user-info">
-                <p>Colt Smith</p>
+                <p>Irene Roberts</p>
                 <p>Verified Buyer</p>
               </div>
             </div>
             <div class="review">
               <p>
-                "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
+                "Customer service is always excellent and very quick turn around. Completely delighted with the simplicity of the purchase and the speed of delivery."
               </p>
             </div>
           </div>
@@ -82,13 +83,13 @@
             <div class="user">
               <img src="img/image-colton.jpg" alt="colt">
               <div class="user-info">
-                <p>Colt Smith</p>
+                <p>Anne Wallace</p>
                 <p>Verified Buyer</p>
               </div>
             </div>
             <div class="review">
               <p>
-                "We needed the same printed design as the one we had ordered a week prior. Not only did they find the original order, but we also received it in time. Excellent!"
+                "Put an order with this company and can only praise them for the very high standard. Will definitely use them again and recommend them to everyone!"
               </p>
             </div>
           </div>
