--- a/index.html
+++ b/index.html
@@ -10,41 +10,43 @@
   <body>
     <main>
       <div class="container">
-        <div class="left-column">
-          <h1>10,000+ of our users love our products.</h1>
-          <p>
-            We only provide great products combined with excellent customer service.
-            See what our satisfied customers are saying about our services.
-          </p>
-        </div>
-        <div class="right-column">
-          <div class="rate">
-            <div class="stars">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
+        <div class="description-rating">
+          <div class="left-column">
+            <h1>10,000+ of our users love our products.</h1>
+            <p>
+              We only provide great products combined with excellent customer service.
+              See what our satisfied customers are saying about our services.
+            </p>
+          </div>
+          <div class="right-column">
+            <div class="rate">
+              <div class="stars">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+              </div>
+              <p>Rated 5 Stars in Reviews</p>
+            </div>          <div class="rate">
+              <div class="stars">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+              </div>
+              <p>Rated 5 Stars in Report Guru</p>
+            </div>          <div class="rate">
+              <div class="stars">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+                <img src="img/icon-star.svg" alt="star">
+              </div>
+              <p>Rated 5 Stars in BestTech</p>
             </div>
-            <p>Rated 5 Stars in Reviews</p>
-          </div>          <div class="rate">
-            <div class="stars">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-            </div>
-            <p>Rated 5 Stars in Reviews</p>
-          </div>          <div class="rate">
-            <div class="stars">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-              <img src="img/icon-star.svg" alt="star">
-            </div>
-            <p>Rated 5 Stars in Reviews</p>
           </div>
         </div>
         <div class="review-card">
@@ -66,7 +68,7 @@
         <div class="review-card">
           <div class="card-container">
             <div class="user">
-              <img src="img/image-colton.jpg" alt="colt">
+              <img src="img/image-irene.jpg" alt="colt">
               <div class="user-info">
                 <p>Irene Roberts</p>
                 <p>Verified Buyer</p>
@@ -81,7 +83,7 @@
         </div>        <div class="review-card">
           <div class="card-container">
             <div class="user">
-              <img src="img/image-colton.jpg" alt="colt">
+              <img src="img/image-anne.jpg" alt="colt">
               <div class="user-info">
                 <p>Anne Wallace</p>
                 <p>Verified Buyer</p>
