--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                 <img src="img/icon-star.svg" alt="star">
               </div>
               <p>Rated 5 Stars in Reviews</p>
-            </div>          <div class="rate">
+            </div>          
+            <div class="rate">
               <div class="stars">
                 <img src="img/icon-star.svg" alt="star">
                 <img src="img/icon-star.svg" alt="star">
@@ -37,7 +38,8 @@
                 <img src="img/icon-star.svg" alt="star">
               </div>
               <p>Rated 5 Stars in Report Guru</p>
-            </div>          <div class="rate">
+            </div>          
+            <div class="rate">
               <div class="stars">
                 <img src="img/icon-star.svg" alt="star">
                 <img src="img/icon-star.svg" alt="star">
