--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
                 </p>
               </div>
             </div>
-          </div>        <div class="review-card">
+          </div>        
+          <div class="review-card">
             <div class="card-container">
               <div class="user">
                 <img src="img/image-anne.jpg" alt="colt">
